tests/snapshots/examples_fixtures/aoc__2025__aoc_day8_part2.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day8_part2.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `range`.

  examples/aoc/2025/aoc_day8_part2.flx:126:16
    |
126 |     let idxs = range(0, n)
    |                ^^^^^

Hint:
  Define it first: let range = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2025/aoc_day8_part2.flx:128:5
    |
128 |     fold(idxs, [||], /(acc, i) -> {
    |     ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `range`.

  examples/aoc/2025/aoc_day8_part2.flx:134:20
    |
134 |     let parents0 = range(0, n)
    |                    ^^^^^

Hint:
  Define it first: let range = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day8_part2.flx:135:18
    |
135 |     let sizes0 = map(range(0, n), /_ -> 1)
    |                  ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2025/aoc_day8_part2.flx:137:5
    |
137 |     fold(sorted_keys, state0, /(st, k) -> union_key(st, k))
    |     ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day8_part2.flx:156:14
    |
156 | let points = [split_ints(trim(line), ",") | line <- lines, trim(line) != ""]
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;

Found 6 errors.
== stdout ==
<not executed>
