tests/snapshots/examples_fixtures/aoc__2025__aoc_day9_part1.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day9_part1.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
